[package]
name = "signalwire-rust-webhook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signalwire-rust-webhook"
path = "main.rs"

[dependencies]
config = "0.15.5"
lettre = "0.11.11"
once_cell = "1.20.2"
salvo = { version = "0.75.0", features = ["full"] } # Use the latest compatible version
serde = "1.0.217"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
url = "2.5.4"
